--- a/.github/workflows/testsCpp.yml
+++ b/.github/workflows/testsCpp.yml
@@ -29,7 +29,7 @@ jobs:
        cmake -D BUILD_TIFF=ON -D WITH_CUDA=OFF -D ENABLE_AVX=OFF -D WITH_OPENGL=OFF -D WITH_OPENCL=OFF -D WITH_IPP=OFF -D WITH_TBB=ON -D BUILD_TBB=ON -D WITH_EIGEN=OFF -D WITH_V4L=OFF -D WITH_VTK=OFF -D BUILD_TESTS=OFF -D BUILD_PERF_TESTS=OFF -D CMAKE_BUILD_TYPE=RELEASE -D CMAKE_INSTALL_PREFIX=/usr/local -D OPENCV_EXTRA_MODULES_PATH=/opt/opencv_contrib/modules /opt/opencv/
        sudo make -j4
        sudo make install
-       ldconfig
+       sudo ldconfig
        cd ~
        sudo apt-get install build-essential gnome-devel
        echo pwd
